Fixed bug with emails being sent during seeding; z-index on filters

--- a/resources/sass/front/_map.scss
+++ b/resources/sass/front/_map.scss
@@ -67,7 +67,7 @@
     display:flex;
     justify-content:flex-end;
     align-items:center;
-    z-index:4;
+    z-index:10;
     .filters {
         height:48px;
         display:flex;
